// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardHeader /> renders with actions 1`] = `
<div
  className="pgn__card-header"
>
  <div
    className="pgn__card-header-content"
  >
    <div
      className="pgn__card-header-title-md"
    >
      Title
    </div>
    <div
      className="pgn__card-header-subtitle-md"
      onClick={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      
    </div>
  </div>
  <div
    className="pgn__card-header-actions"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      type="button"
    >
      Action
    </button>
  </div>
</div>
`;

exports[`<CardHeader /> renders with hasClamp prop 1`] = `
<div
  className="pgn__card-header"
>
  <div
    className="pgn__card-header-content"
  >
    <div
      className="pgn__card-header-title-md"
    />
  </div>
</div>
`;

exports[`<CardHeader /> renders with maxLines prop 1`] = `
<div
  className="pgn__card-header"
>
  <div
    className="pgn__card-header-content"
  >
    <div
      className="pgn__card-header-title-md"
    />
  </div>
</div>
`;

exports[`<CardHeader /> renders with title and subtitle prop 1`] = `
<div
  className="pgn__card-header"
>
  <div
    className="pgn__card-header-content"
  >
    <div
      className="pgn__card-header-title-md"
    >
      Title
    </div>
    <div
      className="pgn__card-header-subtitle-md"
      onClick={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`<CardHeader /> renders with title prop 1`] = `
<div
  className="pgn__card-header"
>
  <div
    className="pgn__card-header-content"
  >
    <div
      className="pgn__card-header-title-md"
    >
      Title
    </div>
  </div>
</div>
`;
